--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "client",
+  "name": "pwatexteditor",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,10 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "express.js": "^1.0.0"
+    "http-server": "^14.1.1"
   },
   "devDependencies": {
+    "express": "^4.18.2",
+    "if-env": "^1.0.4",
     "nodemon": "^3.0.1"
   }
 }
